2004-06-21  Alexandre Oliva  <aoliva@redhat.com>

	2003-05-15  Richard Sandiford  <rsandifo@redhat.com>
	* cpu-h8300.c (compatible): Allow h8300s and h8300sx code to be
	linked together. Mark the result as h8300sx code.

2004-06-21  Alexandre Oliva  <aoliva@redhat.com>

	* elf-bfd.h (struct elf_backend_data): Added
	elf_backend_omit_section_dynsym.
	(_bfd_elf_link_omit_section_dynsym): Declare.
	* elf32-frv.c (_frvfdpic_link_omit_section_dynsym): New.
	(elf_backend_omit_section_dynsym): Use it for frvfdpic.
	* elflink.c (_bfd_elf_link_omit_section_dynsym): Split out of...
	(_bfd_elf_link_renumber_dynsyms): ... this function.
	* elfxx-target.h (elf_backend_omit_section_dynsym): Default to
	_bfd_elf_link_omit_section_dynsym).
	(elfNN_bed): Added elf_backend_omit_section_dynsym.

2004-06-21  Nick Clifton  <nickc@redhat.com>

	* coffcode.h (styp_to_sec_flags): Ignore IMAGE_SCN_MEM_NOT_PAGED
	flags.

2004-06-17  Jerome Guitton  <guitton@gnat.com>

	* bfd-in.h (bfd_cache_close_all): New function declaration.
	* bfd-in2.h: Regenerate.
	* cache.c (bfd_cache_close_all): New function definition.

2004-06-16  Mark Kettenis  <kettenis@gnu.org>

	* configure.in: Don't set COREFILE to trad-core.lo for FreeBSD
	4.10 and beyond.
	* configure: Regenerate.

2004-06-16  Daniel Jacobowitz  <dan@debian.org>

	* elf32-ppc.c (ppc_elf_create_linker_section): Create symbols in
	the pre-existing section.

2004-06-15  Alan Modra  <amodra@bigpond.net.au>

	* section.c (struct sec): Remove usused flags.  Reorganize a little.
	(bfd_get_section_size_before_reloc): Delete.
	(bfd_get_section_size_after_reloc): Delete.
	(STD_SECTION): Update.
	(bfd_get_section_size_now): Delete.
	(bfd_set_section_contents): Don't referece reloc_done.
	(bfd_get_section_contents): Remove reloc_done comment.
	* bout.c (b_out_bfd_get_relocated_section_contents): Don't set
	reloc_done.
	* coff-alpha.c (alpha_ecoff_get_relocated_section_contents): Likewise.
	* ecoff.c (bfd_debug_section): Update initializer.